Fusion-Qa-Final/src/objects/ProductOfIntrest__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
                <value>
                    <fullName>Seafoam</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ProductOfIntrests</relationshipLabel>
        <relationshipName>ProductOfIntrests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drinkware</fullName>
                </value>
                <value>
                    <fullName>Hard-Cooler</fullName>
                </value>
                <value>
                    <fullName>Soft-Cooler</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roadie 20</fullName>
                </value>
                <value>
                    <fullName>Tundra 35</fullName>
                </value>
                <value>
                    <fullName>Tundra 45</fullName>
                </value>
                <value>
                    <fullName>Tundra 50</fullName>
                </value>
                <value>
                    <fullName>Tundra 65</fullName>
                </value>
                <value>
                    <fullName>Tundra 75</fullName>
                </value>
                <value>
                    <fullName>Tundra 105</fullName>
                </value>
                <value>
                    <fullName>Tundra 110</fullName>
                </value>
                <value>
                    <fullName>Tundra 125</fullName>
                </value>
                <value>
                    <fullName>Tundra 160</fullName>
                </value>
                <value>
                    <fullName>Tundra 210</fullName>
                </value>
                <value>
                    <fullName>Tundra 250</fullName>
                </value>
                <value>
                    <fullName>Tundra 350</fullName>
                </value>
                <value>
                    <fullName>Tundra 420</fullName>
                </value>
                <value>
                    <fullName>Hopper 20</fullName>
                </value>
                <value>
                    <fullName>Hopper 30</fullName>
                </value>
                <value>
                    <fullName>Hopper 40</fullName>
                </value>
                <value>
                    <fullName>Tank 45</fullName>
                </value>
                <value>
                    <fullName>Tank 85</fullName>
                </value>
                <value>
                    <fullName>Sherpa</fullName>
                </value>
                <value>
                    <fullName>Tundra 45 White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProductOfIntrest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>Products__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Qty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>List_of_Products</fullName>
        <columns>NAME</columns>
        <columns>Products__c</columns>
        <columns>Color__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Qty__c</columns>
        <filterScope>Everything</filterScope>
        <label>List of Products</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Product No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductOfIntrests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>